syntax = "proto3";

package tutorial;

message LoginPost {
  string email = 1;
  string password = 2;
}

message TokenResponse{
  string token = 1;
}


message PaginationRequest{
  int32 page = 1;
  int32 per_page = 2;
}
message PaginationResponse{
  int32 total_count = 1;
  int32 per_page = 2;
  int32 current_page = 3;
  int32 page_count = 4;
}